render all books from api in js with adding somethings in html and css related #13

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
     <div class="auto-Complete-container">
 
     </div>
+    <div class="cards">
+
+    </div>
 
     <script src="./public/js/fetch.js"></script>
     <script src="./public/js/script.js"></script>
