Edit some files names and move content of theses files to others related #21

--- a/public/index.html
+++ b/public/index.html
@@ -5,23 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Books Station</title>
-    <!-- css links -->
+    <!-- css link -->
     <link rel="stylesheet" href="./public/css/style.css">
 </head>
 <body>
-    <form action="" class="search-form">
-        <input type="search" class="search-input" placeholder="Get your book"> 
-        <input type="submit" value="Get Book" class="search-btn">
-    </form>
-    <div class="auto-Complete-container">
-
-    </div>
-    <div class="cards">
-
-    </div>
-
-    <script src="./public/js/fetch.js"></script>
-    <script src="./public/js/script.js"></script>
-
+    <button><a href="./home">Go</a></button>
 </body>
 </html>
