I created a folder for the  images,and I created and desgined the index page related #19

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Books Station</title>
     <!-- css link -->
-    <link rel="stylesheet" href="./public/css/style.css">
+    <link rel="stylesheet" href="/public/css/style.css">
 </head>
+
 <body>
-    <button><a href="./home">Go</a></button>
+    <main>
+        <section  class="content-container">
+        <div class="logo">
+            <img src="/public/images/mainImage.png" alt="Landing photo">
+        </div>
+        <div class="intro">
+            <p class="title">Read and Learn AnyWhere</p>
+            <p class="desc">This site provides the ability to search for any book you are looking for quickly through a very large database. </p>
+        </div>
+       </section>
+        <a class="link" href="./home"><button class="btn-go">Get Started</button></a>
+    </main>
+
 </body>
+
 </html>
