--- a/public/notFound.html
+++ b/public/notFound.html
@@ -19,10 +19,10 @@
                 We can't find that page
             </h3>
             <h4>
-                We're fairly sure that page used to be here,but seems to<br>
+                We're fairly sure that page used to be here, but seems to<br>
                 have gone missing. we do apologies on it's behalf.
             </h4>
-            <a href="./home.html"><button class="btn-go">Home</button></a>
+            <a class='link' href="./home.html"><button class="btn-go">Home</button></a>
         </div>
     </main>
 </body>
