make some edits in css styles and change some html pages related #40

--- a/public/notFound.html
+++ b/public/notFound.html
@@ -22,7 +22,7 @@
                 We're fairly sure that page used to be here, but seems to<br>
                 have gone missing. we do apologies on it's behalf.
             </h4>
-            <a class='link' href="./home.html"><button class="btn-go">Home</button></a>
+            <a class='link' href="./home"><button class="btn-go">Home</button></a>
         </div>
     </main>
 </body>
