--- a/public/home.html
+++ b/public/home.html
@@ -8,6 +8,8 @@
     <title>Books Station || Search Book</title>
     <!-- css links -->
     <link rel="stylesheet" href="./public/css/home.css">
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
 
 <body>
@@ -18,7 +20,9 @@
                 <input type="search" class="search-input" placeholder="Get your book">
                  <div class="auto-Complete-container"> </div>
             </div>
-            <input type="submit" value="Get Book" class="search-btn">
+            <button type="submit" class="search-btn">
+                <i class="fa-solid fa-magnifying-glass"></i> 
+            </button>
         </form>
     </header>
     
